--- a/app/client/templates/home/Home.html
+++ b/app/client/templates/home/Home.html
@@ -1,8 +1,59 @@
 <template name="Home">
-  <img style="float:left" width="240px" class="img-circle" src="/images/meteor-logo.png" />
-  <div class="jumbotron">
 
-    <h1>Welcome to this template</h1>
-    <p>Now get to work and modify this app!</p>
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-3">
+        <div class="well">
+          <h1>Information</h1>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#"></a>Administration</li>
+            <li><a href="#"></a>Athletics</li>
+            <li><a href="#"></a>Bell Schedule</li>
+            <li><a href="#"></a>Calendar</li>
+            <li><a href="#"></a>Counselors</li>
+            <li><a href="#"></a>Daily Bulletin</li>
+            <li><a href="#"></a>Directories</li>
+            <li><a href="#"></a>Knightly News</li>
+            <li><a href="#"></a>Library</li>
+            <li><a href="#"></a>Lunch Menu</li>
+            <li><a href="#"></a>Small Learning Communities</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-md-6 hidden-xs">
+        <div class="well">
+          <h1>Welcome to Castle High School</h1>
+          <div class="knight-pride-image"></div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="well">
+          <h1>Announcement</h1>
+          <h2>Monday, October 19</h2>
+          <p>Periods 1-7</p>
+
+          <h2>Tuesday, October 20</h2>
+          <p>Periods 1, 3, 5, 7</p>
+
+          <h2>          Wednesday, October 21
+          </h2>
+          <p>          Periods 2, 4, 6
+          </p>
+          <h2>          Thursday, October 22
+          </h2>
+          <p>          Periods 1, 3, 5, 7
+          </p>
+          <h2>          Friday, October 23
+          </h2>
+          <p>          Periods 2, 4, ADV, 6
+          </p>        </div>
+
+      </div>
+    </div>
   </div>
+
 </template>
